mostly postcss additions

--- a/Portals/_default/Skins/GoingAllNode/package.json
+++ b/Portals/_default/Skins/GoingAllNode/package.json
@@ -2,9 +2,12 @@
   "name": "goingallnode",
   "version": "1.0.0",
   "scripts": {
-    "build:postcss": "postcss --dir ./dist skin.css --use autoprefixer --autoprefixer.browsers \"last 2 versions, ie >= 10\" ./src/css/*.css",
+    "postcss:csswring": "csswring --sourcemap ./src/css/skin.css ./dist/skin.css",
+    "build:postcss": "postcss --dir ./dist skin.css --use autoprefixer --config ./options/autoprefixer.json --use postcss-import --use postcss-mixins --use postcss-nested --use postcss-simple-vars --use postcss-mathjs --use postcss-extend  --use css-mqpacker --css-mqpacker.sort true ./src/css/*.css; npm run postcss:csswring",
     "build:uglify": "uglifyjs --output ./dist/js/main.js ./src/js/main.js --compress --mangle --lint --screw-ie8",
     "build:images": "imagemin ./src/img/* ./dist/img",
+    "prebuild": "rimraf ./dist/js/* ./dist/img/*",
+    "build": "npm run build:postcss; npm run build:uglify; npm run build:images",
     "watch:postcss": "watch 'npm run build:postcss' ./src/css",
     "watch:uglify": "watch 'npm run build:uglify' ./src/js",
     "watch:images": "watch 'npm run build:images' ./src/img",
@@ -15,11 +18,19 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.4",
+    "css-mqpacker": "^4.0.1",
+    "csswring": "^4.2.2",
     "imagemin": "^4.0.0",
     "imagemin-cli": "^2.1.0",
     "parallelshell": "^2.0.0",
     "postcss": "^5.0.19",
     "postcss-cli": "^2.5.1",
+    "postcss-extend": "^1.0.1",
+    "postcss-import": "^8.0.2",
+    "postcss-mathjs": "^1.0.0",
+    "postcss-mixins": "^4.0.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^1.2.0",
     "rimraf": "^2.5.2",
     "uglify-js": "^2.6.2",
     "watch": "^0.17.1"
