--- a/Portals/_default/Skins/GoingAllNode/package.json
+++ b/Portals/_default/Skins/GoingAllNode/package.json
@@ -2,8 +2,8 @@
   "name": "goingallnode",
   "version": "1.0.0",
   "scripts": {
-    "postcss:csswring": "csswring --sourcemap ./src/css/skin.css ./dist/skin.css",
-    "build:postcss": "postcss --dir ./dist skin.css --use autoprefixer --config ./options/autoprefixer.json --use postcss-import --use postcss-mixins --use postcss-nested --use postcss-simple-vars --use postcss-mathjs --use postcss-extend  --use css-mqpacker --css-mqpacker.sort true ./src/css/*.css; npm run postcss:csswring",
+    "postcss:csswring": "csswring --sourcemap ./src/css/*.css ./dist/skin.css",
+    "build:postcss": "postcss --dir ./dist skin.css --use postcss-easy-import --use postcss-mixins --use postcss-nested --use postcss-simple-vars --use postcss-mathjs --use postcss-extend --use autoprefixer --use css-mqpacker --css-mqpacker.sort true --config options.json ./src/css/skin.css; npm run postcss:csswring",
     "build:uglify": "uglifyjs --output ./dist/js/main.js ./src/js/main.js --compress --mangle --lint --screw-ie8",
     "build:images": "imagemin ./src/img/* ./dist/img",
     "prebuild": "rimraf ./dist/js/* ./dist/img/*",
@@ -25,8 +25,8 @@
     "parallelshell": "^2.0.0",
     "postcss": "^5.0.19",
     "postcss-cli": "^2.5.1",
+    "postcss-easy-import": "^1.0.1",
     "postcss-extend": "^1.0.1",
-    "postcss-import": "^8.0.2",
     "postcss-mathjs": "^1.0.0",
     "postcss-mixins": "^4.0.1",
     "postcss-nested": "^1.0.0",
