more postcss task fixing

--- a/Portals/_default/Skins/GoingAllNode/package.json
+++ b/Portals/_default/Skins/GoingAllNode/package.json
@@ -2,22 +2,24 @@
   "name": "goingallnode",
   "version": "1.0.0",
   "scripts": {
-    "postcss:csswring": "csswring --sourcemap ./src/css/*.css ./dist/skin.css",
-    "build:postcss": "postcss --dir ./dist skin.css --use postcss-easy-import --use postcss-mixins --use postcss-nested --use postcss-simple-vars --use postcss-mathjs --use postcss-extend --use autoprefixer --use css-mqpacker --css-mqpacker.sort true --config options.json ./src/css/skin.css; npm run postcss:csswring",
-    "build:uglify": "uglifyjs --output ./dist/js/main.js ./src/js/main.js --compress --mangle --lint --screw-ie8",
+    "postcss": "postcss --dir ./dist skin.css --use postcss-easy-import --use postcss-mixins --use postcss-nested --use postcss-simple-vars --use postcss-mathjs --use postcss-extend --use autoprefixer --use css-mqpacker --config options.json ./src/css/skin.css",
+    "cleancss": "cleancss -o ./dist/skin.css ./dist/skin.css",
+    "build:css": "npm run postcss && npm run cleancss",
+    "build:js": "uglifyjs --output ./dist/js/main.js ./src/js/main.js --compress --mangle --lint --screw-ie8",
     "build:images": "imagemin ./src/img/* ./dist/img",
     "prebuild": "rimraf ./dist/js/* ./dist/img/*",
-    "build": "npm run build:postcss; npm run build:uglify; npm run build:images",
-    "watch:postcss": "watch 'npm run build:postcss' ./src/css",
-    "watch:uglify": "watch 'npm run build:uglify' ./src/js",
+    "build": "npm run build:css && npm run build:js && npm run build:images",
+    "watch:css": "watch 'npm run build:css' ./src/css",
+    "watch:js": "watch 'npm run build:js' ./src/js",
     "watch:images": "watch 'npm run build:images' ./src/img",
     "prewatch": "rimraf ./dist/js/* ./dist/img/*",
-    "watch": "parallelshell 'npm run watch:uglify' 'npm run watch:postcss' 'npm run watch:images'"
+    "watch": "parallelshell 'npm run watch:js' 'npm run watch:css' 'npm run watch:images'"
   },
   "author": "Monica Salter",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.4",
+    "clean-css": "^3.4.10",
     "css-mqpacker": "^4.0.1",
     "csswring": "^4.2.2",
     "imagemin": "^4.0.0",
