building demo site

--- a/Portals/_default/Skins/GoingAllNode/package.json
+++ b/Portals/_default/Skins/GoingAllNode/package.json
@@ -5,14 +5,12 @@
     "postcss": "postcss --dir ./dist skin.css --use postcss-easy-import --use postcss-mixins --use postcss-nested --use postcss-simple-vars --use postcss-mathjs --use postcss-extend --use autoprefixer --use css-mqpacker --config options.json ./src/css/skin.css",
     "cleancss": "cleancss --output ./dist/skin.css ./dist/skin.css",
     "build:css": "npm run postcss && npm run cleancss",
-    "build:js": "uglifyjs --output ./dist/js/main.js ./src/js/main.js --compress --mangle --lint --screw-ie8",
-    "build:images": "imagemin ./src/img/* ./dist/img",
-    "prebuild": "rimraf ./dist/js/* ./dist/img/*",
+    "build:js": "rimraf ./dist/js/* && uglifyjs --output ./dist/js/main.js ./src/js/main.js --compress --mangle --lint --screw-ie8",
+    "build:images": "rimraf ./dist/img/* && imagemin ./src/img/* ./dist/img",
     "build": "npm run build:css && npm run build:js && npm run build:images",
     "watch:css": "watch 'npm run build:css' ./src/css",
     "watch:js": "watch 'npm run build:js' ./src/js",
     "watch:images": "watch 'npm run build:images' ./src/img",
-    "prewatch": "rimraf ./dist/js/* ./dist/img/*",
     "watch": "parallelshell 'npm run watch:js' 'npm run watch:css' 'npm run watch:images'"
   },
   "author": "Monica Salter",
